Added first item, progress on first block

--- a/src/main/resources/assets/liftoffgalacticodyssey/lang/en_us.json
+++ b/src/main/resources/assets/liftoffgalacticodyssey/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "itemGroup.liftoffgalacticodyssey": "Example Mod Tab",
-  "block.liftoffgalacticodyssey.example_block": "Example Block",
+  "block.liftoffgalacticodyssey.placeholderblock": "Placeholder Block",
   "item.liftoffgalacticodyssey.screamertooth": "Screamer tooth"
 }
