Still need to fix recipe for necklace

--- a/src/main/resources/assets/liftoffgalacticodyssey/lang/en_us.json
+++ b/src/main/resources/assets/liftoffgalacticodyssey/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.liftoffgalacticodyssey.screamertooth": "Screamer tooth",
   "item.liftoffgalacticodyssey.screamer_flesh": "Raw Screamer flesh",
   "item.liftoffgalacticodyssey.screamer_tooth_spear": "Screamer tooth spear",
+  "item.liftoffgalacticodyssey.screamer_tooth_necklace": "Screamer tooth necklace",
   "creativetab.liftoffgalacticodyssey.galacticodyssey": "Galactic Odyssey",
   "creativetab.liftoffgalacticodyssey.galacticodyssey.mobs": "Galactic Odyssey Spawn Eggs"
 }
