Created a custom modtags class, changed some stuff and made Screamer flesh functional

--- a/src/main/resources/assets/liftoffgalacticodyssey/lang/en_us.json
+++ b/src/main/resources/assets/liftoffgalacticodyssey/lang/en_us.json
@@ -8,5 +8,6 @@
   "item.liftoffgalacticodyssey.screamer_tooth_spear": "Screamer tooth spear",
   "item.liftoffgalacticodyssey.screamer_tooth_necklace": "Screamer tooth necklace",
   "creativetab.liftoffgalacticodyssey.galacticodyssey": "Galactic Odyssey",
-  "creativetab.liftoffgalacticodyssey.galacticodyssey.mobs": "Galactic Odyssey Spawn Eggs"
+  "creativetab.liftoffgalacticodyssey.galacticodyssey.mobs": "Galactic Odyssey Spawn Eggs",
+  "tooltip.liftoffgalacticodyssey.screamer_flesh": "This looks poisonous!"
 }
